--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'androidx.preference:preference-ktx:1.1.0'
 
     //androidTestImplementation 'com.android.support:palette-v7:29.0.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
